--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=DEBUG, file
+log4j.rootLogger=INFO, file
 # File appender
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
