--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -1,3 +1,6 @@
 #CheckStyle command
 
 mvn checkstyle:check
+
+select empName,salary from employee e1 where 1=\
+  (select count(distinct(salary) from employee e2 where e2.salary>e1.salary)
