--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -2,5 +2,6 @@
 
 mvn checkstyle:check
 
+#Sql Command
 select empName,salary from employee e1 where 1=\
   (select count(distinct(salary) from employee e2 where e2.salary>e1.salary)
