--- a/pom.xml
+++ b/pom.xml
@@ -111,24 +111,24 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${mvn-compiler-plugin.version}</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>21</source>
+                    <target>21</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.1.2</version>-->
                 <!--<configuration>
                     <excludes>**/cosmos/model/**</excludes>
                 </configuration>-->
-                <dependencies>
+               <!-- <dependencies>
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>8.41</version> <!-- Specify the Checkstyle version here -->
+                        <version>8.41</version> &lt;!&ndash; Specify the Checkstyle version here &ndash;&gt;
                     </dependency>
                 </dependencies>
                 <executions>
@@ -142,7 +142,7 @@
                             <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <failsOnError>true</failsOnError>
-                            <!--<failsOnViolation>true</failsOnViolation>-->
+                            &lt;!&ndash;<failsOnViolation>true</failsOnViolation>&ndash;&gt;
                             <violationSeverity>warning</violationSeverity>
                         </configuration>
                         <goals>
@@ -150,7 +150,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
