--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>reactor-test</artifactId>
         </dependency>
 
+        <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20210307</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
