--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
             <version>3.4.6</version>
         </dependency>
         <!-- test data -->
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
 
         <dependency>
             <groupId>io.projectreactor</groupId>
