--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
          <module>primary-adaptor</module>&ndash;&gt;
     </modules>-->
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <disable.checkstyle.validation>false</disable.checkstyle.validation>
         <mvn-compiler-plugin.version>3.11.0</mvn-compiler-plugin.version>
     </properties>
@@ -89,11 +90,18 @@
             <version>4.2.0</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
         </dependency>
 
 
